--- a/src/index.html
+++ b/src/index.html
@@ -26,13 +26,19 @@
             padding: 5px;
         }
 
-        #canvas {}
+        #canvas {
+            background-color: blanchedalmond;
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            image-rendering: pixelated;
+        }
     </style>
 
 </head>
 
 <body>
-    <h1>WebGL-Particles</h1>
+    <!-- <h1>WebGL-Particles</h1> -->
     <canvas id="canvas"></canvas>
 </body>
 
